# infiquetra-antigravity-plugins

./: .gitignore  .yamllint  ANTIGRAVITY.md  README.md  STRATEGY.md  pyproject.toml
.antigravitycli/: 539e49a8-0cbf-4697-b508-d703d52966aa.json
.claude-plugin/: marketplace.json
.gemini/saga/: state.json
.github/workflows/: ci.yml
.neuralmind/: audit_events.jsonl  index_ir.json  ir_meta.json  synapses.db
.serena/: project.yml
docs/: FULL_REPO_CODE_REVIEW.md  MARKETPLACE_GUIDE.md  PLUGIN_SPEC.md  agent-overflow.sh  example_tmux.conf  test-overflow.sh
docs/brainstorms/: 2026-06-05-port-claude-plugins-requirements.md  2026-06-11-impl-spec-and-product-review-requirements.md  2026-06-27-antigravity-harness-requirements.md  2026-07-12-ship-ceremony-safety-pack-requirements.md
docs/code-reviews/: 2026-06-06-port-todoist-plugin-code-review.md  2026-07-09-feat-port-claude-july-updates-code-review.md  2026-07-09-feat-port-claude-july-updates-round-2-code-review.md  2026-07-09-feat-port-claude-july-updates-round-3-code-review.md  2026-07-09-feat-port-claude-july-updates-round-4-code-review.md  2026-07-09-feat-port-claude-july-updates-round-5-code-review.md  2026-07-09-feat-port-claude-july-updates-round-6-code-review.md  (+1 more)
graphify-out/: graph.json
scripts/: port_claude_plugin.py  review_canary.py  validate_plugins.py
tests/: conftest.py  test_agent_tier_lint.py  test_antigravity_harness_docs.py  test_antigravity_plugin_doctor.py  test_ebay_client.py  test_marketplace_client.py  test_pagerduty_client.py  test_port_claude_plugin.py  test_review_canary.py  test_saga_doc_formatting.py  test_sdlc_manager.py  test_slack_client.py  test_splunk_client.py  test_test_runner.py  test_todoist_client.py  test_todoist_mcp_schemas.py  test_todoist_portability.py  test_unifi_network_client.py  test_unifi_protect_client.py
tools/: create-plugin.sh  install-plugin.sh
(+574 files in other folders)
