[project]
name = "infiquetra-antigravity-plugins"
version = "1.0.0"
description = "Google Antigravity plugins for Infiquetra development workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Infiquetra", email = "hello@infiquetra.com" }
]
keywords = ["antigravity", "plugins", "development", "automation"]

dependencies = [
    "pyyaml>=6.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "jsonschema>=4.0",
    "safety>=3.0.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]
ebay = [
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugins"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test names reference class names like ApiNotFound, ApiAlreadyExists
# (PEP 8 CapWords for exception classes); the test name is more readable
# when it preserves the case. N802 "should be lowercase" is the wrong fit
# for tests that embed class-name references in their names.
"plugins/*/tests/*.py" = ["N802"]
"tests/*.py" = ["N802"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "plugins/*/tests"]
addopts = "-v --cov=plugins --cov-report=term-missing"

[tool.coverage.run]
source = ["plugins"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
